--- a/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/default/css/product3dViewer.css
+++ b/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/default/css/product3dViewer.css
@@ -8,6 +8,10 @@
 	display: block;
 	opacity: 1;
 	transition: opacity 0.15s ease;
+	border-top: 1px solid #ddd;
+	margin-top: 5px;
+	width: 60%;
+	padding-top: 15px;
 }
 .product-image-3dviewer-link--hidden {
 	opacity: 0;
