Fix iframe not loading on some browsers - refs #11227

--- a/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/default/css/product3dViewer.css
+++ b/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/default/css/product3dViewer.css
@@ -45,7 +45,7 @@
 	opacity: 0.5;
 }
 .product-image-3dviewer--loading iframe {
-	visibility: hidden;
+	opacity: 0;
 }
 .product-image-3dviewer--loading .loader {
 	visibility: visible;
