--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/checkout/cart/item/default.phtml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/checkout/cart/item/default.phtml
@@ -36,9 +36,11 @@ $imgY = $helper->calculateHeight($imgX);
         </dl>
         <?php endif;?>
         <?php if ($messages = $this->getMessages()): ?>
-        <?php foreach ($messages as $message): ?>
-            <p class="item-msg <?php echo $message['type'] ?>">* <?php echo $message['text'] ?></p>
-        <?php endforeach; ?>
+            <?php foreach ($messages as $message): ?>
+                <p class="item-msg <?php echo $message['type'] ?>">
+                    <?php echo $message['text'] ?>
+                </p>
+            <?php endforeach; ?>
         <?php endif; ?>
         <?php if ($addtInfoBlock = $this->getProductAdditionalInformationBlock()):?>
             <?php echo $addtInfoBlock->setItem($_item)->toHtml() ?>
