Change tablet and mobile view on homepage - refs #11612

--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/page/home-new.phtml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/page/home-new.phtml
@@ -194,100 +194,8 @@
                     <section id="paralax">
                         <?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('home-countdown-section')->toHtml(); ?>
                     </section>
-                    <section class="gammes container gammes-mobile">
-                        <article class="original">
-                            <div class="product-image col-md-4">
-                                <img src="<?php echo Mage::getDesign()->getSkinUrl(); ?>images/original.png" alt="Original" />
-                            </div>
-                            <div class="product-text col-md-4">
-                                <h2>Le Jumbobag Original</h2>
-                                <p>The Original est le <strong>pouf géant</strong> incontournable de la marque Jumbo Bag. Entièrement <strong>imperméable</strong> : il peut aussi bien être utilisé en tant que <strong>coussin d’extérieur</strong> ou comme <strong>pouf design</strong> en intérieur. De plus sa housse amovible
-                                    lui permet d’être lavé en machine. Un choix de 16 couleurs est proposé pour s’adapter parfaitement à votre <strong>décoration</strong>.</p>
-                                <a href="/original.html">Voir la collection</a>
-                            </div>
-                        </article>
-                        <article class="printed">
-                            <div class="product-text col-md-4">
-                                <h2>La collection d'imprimés</h2>
-                                <p>The Original Jumbobag Printed est LE <strong>pouf design</strong> et <strong>tendance</strong> qu’il vous faut. Il se fondra facilement dans votre <strong>décoration intérieure</strong> grâce à une palette de plus de
-                                    30 motifs. Avec son tissu <strong>imperméable</strong> le pouf imprimé Jumbobag peut également être une super <strong>idée déco</strong> pour votre <strong>jardin</strong>.</p>
-                                <a href="/original-printed.html">Voir la collection</a>
-                            </div>
-                            <div class="product-image col-md-4">
-                                <img src="<?php echo Mage::getDesign()->getSkinUrl(); ?>images/printed.png" alt="Imprimés" />
-                            </div>
-                        </article>
-                        <article class="flottant">
-                            <div class="product-image col-md-4">
-                                <img src="<?php echo Mage::getDesign()->getSkinUrl(); ?>images/flottant.png" alt="Flottant" />
-                            </div>
-                            <div class="product-text col-md-4">
-                                <h2>Les poufs flottants</h2>
-                                <p>Découvrez la gamme <strong>Swimming bag</strong> ! Jumbobag propose différents types de <strong>poufs flottants</strong> allant du <strong>coussin géant</strong> au <strong>donnut</strong> pour s’adapter à
-                                    toutes les <strong>piscines</strong>. <strong>Design</strong> et colorés nos coussins flottants sauront se fondre avec l’ambiance de votre choix.</p>
-                                <a href="/products/pouf/demo-poufs-flottants.html">Voir la collection</a>
-                            </div>
-                        </article>
-                        <article class="x-trem">
-                            <div class="product-text col-md-4">
-                                <h2>La collection X-Trem</h2>
-                                <p>Jumbo bag présente sa collection X-trem ! Entièrement <strong>fabriquée en France</strong> les poufs de cette collection ont été conçus pour une <strong>utilisation intensive</strong>.  En tissus <strong>Sunbrella®</strong>
-                                    ou simili <strong>cuir</strong> les trois produits phares de la marque sont déclinés : Le <strong>coussin géant</strong> The Original, le Swimming Bag, le cube ainsi que le <strong>pouf poire</strong> Scuba XXL. A découvrir sans attendre. </p>
-                                <a href="/products/pouf/demo-collection-xtrem.html">Voir la collection</a>
-                            </div>
-                            <div class="product-image col-md-4">
-                                <img src="<?php echo Mage::getDesign()->getSkinUrl(); ?>images/xtrem.png" alt="x-trem" />
-                            </div>
-                        </article>
-                    </section>
-                    <section class="gammes container gammes-mobile-view">
-                        <article class="original">
-                            <div class="product-image col-md-4">
-                                <img src="<?php echo Mage::getDesign()->getSkinUrl(); ?>images/original.png" alt="Original" />
-                            </div>
-                            <div class="product-text col-md-4">
-                                <h2>Le Jumbobag Original</h2>
-                                <p>The Original est le <strong>pouf géant</strong> incontournable de la marque Jumbo Bag. Entièrement <strong>imperméable</strong> : il peut aussi bien être utilisé en tant que <strong>coussin d’extérieur</strong> ou comme <strong>pouf design</strong> en intérieur. De plus sa housse amovible
-                                    lui permet d’être lavé en machine. Un choix de 16 couleurs est proposé pour s’adapter parfaitement à votre <strong>décoration</strong>.</p>
-                                <a href="/original.html">Voir la collection</a>
-                            </div>
-                        </article>
-                        <article class="printed">
-                            <div class="product-image col-md-4">
-                                <img src="<?php echo Mage::getDesign()->getSkinUrl(); ?>images/printed.png" alt="Imprimés" />
-                            </div>
-                            <div class="product-text col-md-4">
-                                <h2>La collection d'imprimés</h2>
-                                <p>The Original Jumbobag Printed est LE <strong>pouf design</strong> et <strong>tendance</strong> qu’il vous faut. Il se fondra facilement dans votre <strong>décoration intérieure</strong> grâce à une palette de plus de
-                                    30 motifs. Avec son tissu <strong>imperméable</strong> le pouf imprimé Jumbobag peut également être une super <strong>idée déco</strong> pour votre <strong>jardin</strong>.</p>
-                                <a href="/original-printed.html">Voir la collection</a>
-                            </div>
-
-                        </article>
-                        <article class="flottant">
-                            <div class="product-image col-md-4">
-                                <img src="<?php echo Mage::getDesign()->getSkinUrl(); ?>images/flottant.png" alt="Flottant" />
-                            </div>
-                            <div class="product-text col-md-4">
-                                <h2>Les poufs flottants</h2>
-                                <p>Découvrez la gamme <strong>Swimming bag</strong> ! Jumbobag propose différents types de <strong>poufs flottants</strong> allant du <strong>coussin géant</strong> au <strong>donnut</strong> pour s’adapter à
-                                    toutes les <strong>piscines</strong>. <strong>Design</strong> et colorés nos coussins flottants sauront se fondre avec l’ambiance de votre choix.</p>
-                                <a href="/products/pouf/demo-poufs-flottants.html">Voir la collection</a>
-                            </div>
-                        </article>
-                        <article class="x-trem">
-                            <div class="product-image col-md-4">
-                                <img src="<?php echo Mage::getDesign()->getSkinUrl(); ?>images/xtrem.png" alt="x-trem" />
-                            </div>
-                            <div class="product-text col-md-4">
-                                <h2>La collection X-Trem</h2>
-                                <p>Jumbo bag présente sa collection X-trem ! Entièrement <strong>fabriquée en France</strong> les poufs de cette collection ont été conçus pour une <strong>utilisation intensive</strong>.  En tissus <strong>Sunbrella®</strong>
-                                    ou simili <strong>cuir</strong> les trois produits phares de la marque sont déclinés : Le <strong>coussin géant</strong> The Original, le Swimming Bag, le cube ainsi que le <strong>pouf poire</strong> Scuba XXL. A découvrir sans attendre. </p>
-                                <a href="/products/pouf/demo-collection-xtrem.html">Voir la collection</a>
-                            </div>
-
-                        </article>
-                    </section>
+                    <style>
+                    </style>
                     <section class="gammes container">
                         <?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('original-jumbobag')->toHtml(); ?>
                         <?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('home-collection')->toHtml(); ?>
