CSS adjustements for custom availability and some homepage adjustements

--- a/.modman/Jumbobag_Catalog/src/app/design/frontend/jumbobag/default/template/catalog/product/view/type/default.phtml
+++ b/.modman/Jumbobag_Catalog/src/app/design/frontend/jumbobag/default/template/catalog/product/view/type/default.phtml
@@ -32,7 +32,7 @@
 <?php echo $this->getPriceHtml($_product) ?>
 <?php echo $this->getChildHtml('product_ecotax') ?>
 <?php if ($_product->isAvailable()): ?>
-<p class="availability in-stock"><?php echo $this->__('Availability:') ?> <span><?php echo empty($inStockLabel) ? $this->__('In stock') : $inStockLabel; ?></span></p>
+<p class="availability in-stock"><?php echo $this->__('Availability:') ?> <span><?php echo empty($inStockLabel) ? $this->__('In stock') : "<span class='custom-availability-text'>".$inStockLabel."</span>" ?></span></p>
 <?php else: ?>
 <p class="availability out-of-stock"><?php echo $this->__('Availability:') ?> <span><?php echo $this->__('Out of stock') ?></span></p>
 <?php endif; ?>
