--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/downloadable/catalog/product/type.phtml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/downloadable/catalog/product/type.phtml
@@ -36,7 +36,7 @@
 <?php echo $this->getChildHtml('product_type_data_extra') ?>
 <?php echo $this->getPriceHtml($_product) ?>
 <?php if($_product->isSaleable()): ?>
-<p class="availability in-stock"><?php echo $this->__('Availability:') ?> <span><?php echo empty($inStockLabel) ? $this->helper('catalog')->__('In stock') : $inStockLabel; ?></span></p>
+<p class="availability in-stock"><?php echo $this->__('Availability:') ?> <span><?php echo empty($inStockLabel) ? $this->helper('catalog')->__('In stock') : "<span class='custom-availability-text'>".$inStockLabel."</span>"; ?></span></p>
 <?php else: ?>
 <p class="availability out-of-stock"><?php echo $this->__('Availability:') ?> <span><?php echo $this->__('Out of stock') ?></span></p>
 <?php endif; ?>
