--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/page/html/footer.phtml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/page/html/footer.phtml
@@ -28,9 +28,12 @@
         <div class="image-wrapper wow fadeIn" data-wow-delay="0.3s">
           <img src="/skin/frontend/jumbobag/default/images/bulles.svg" alt="Se faire aider pour un achat" />
         </div>
-        <h3>Se faire aider pour un achat</h3>
-        <p>Une question ? Appelez-nous <br> 05 67 68 67 89 ou</p>
-        <a href="/"><span>chattez en ligne</span></a>
+        <h3>Besoin d'aide ?</h3>
+        <p>
+            Une question avant d'acheter&nbsp;?<br>
+            Appelez-nous : 09 72 60 09 18<br>
+            <small>(appel non surtaxé)</small>
+        </p>
       </div>
     </div>
   </div>
