--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/bundle/catalog/product/view/type/bundle.phtml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/bundle/catalog/product/view/type/bundle.phtml
@@ -41,7 +41,7 @@
     <?php echo $this->getChildHtml('bundle_prices') ?>
 </div>
 <?php if ($_product->isAvailable()): ?>
-    <p class="availability in-stock"><?php echo $this->helper('catalog')->__('Availability:') ?> <span><?php echo empty($inStockLabel) ? $this->helper('catalog')->__('In stock') : $inStockLabel; ?></span></p>
+    <p class="availability in-stock"><?php echo $this->helper('catalog')->__('Availability:') ?> <span><?php echo empty($inStockLabel) ? $this->helper('catalog')->__('In stock') : "<span class='custom-availability-text'>".$inStockLabel."</span>" ?></span></p>
 <?php else: ?>
     <p class="availability out-of-stock"><?php echo $this->helper('catalog')->__('Availability:') ?> <span><?php echo $this->helper('catalog')->__('Out of stock') ?></span></p>
 <?php endif; ?>
