--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/modern/template/catalog/product/view.phtml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/modern/template/catalog/product/view.phtml
@@ -222,7 +222,7 @@ echo $this->getChildHtml('extrahint');
                         <?php $inStockLabel = $_product->getData("texte_perso_dispo"); ?>
                         <?php if ($this->displayProductStockStatus()): ?>
                             <?php if ($_product->isAvailable()): ?>
-                                <p class="availability in-stock"><?php echo $this->__('Availability:') ?> <span><?php echo empty($inStockLabel) ? $this->helper('catalog')->__('In stock') : $inStockLabel; ?></span></p>
+                                <p class="availability in-stock"><?php echo $this->__('Availability:') ?> <span><?php echo empty($inStockLabel) ? $this->helper('catalog')->__('In stock') : "<span class='custom-availability-text'>".$inStockLabel."</span>"; ?></span></p>
                             <?php else: ?>
                                 <p class="availability out-of-stock"><?php echo $this->__('Availability:') ?> <span><?php echo $this->__('Out of stock') ?></span></p>
                             <?php endif; ?>
