--- a/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/modern/css/styles.css
+++ b/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/modern/css/styles.css
@@ -1554,12 +1554,16 @@ tr.summary-details-excluded {
 .availability {
 	margin: 0;
 }
-.availability span {
+.availability span,
+.availability span span {
 	font-weight: bold;
 }
 .availability.out-of-stock span {
 	color: #d83820;
 }
+
+.availability span span.custom-availability-text{color:#eb5e00;}
+
 .availability-only {
 	margin: 0 0 7px;
 }
