add new Instagram footer and change they talk about us

--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/modern/layout/local.xml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/modern/layout/local.xml
@@ -63,7 +63,7 @@
             </action>
             <action method="addItem">
                 <type>skin_js</type>
-                <name>js/instafeed.min.js</name>
+                <name>js/jumbobag.js</name>
             </action>
             <action method="addItem">
                 <type>skin_js</type>
