--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/layout/local.xml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/layout/local.xml
@@ -421,7 +421,7 @@
         <reference name="head">
             <action method="addItem">
                 <type>skin_js</type>
-                <name>js/instafeed.min.js</name>
+                <name>js/jumbobag.js</name>
             </action>
             <action method="addItem">
                 <type>skin_js</type>
