--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/page/home-new.phtml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/page/home-new.phtml
@@ -96,24 +96,24 @@
 <link rel= "stylesheet" href= "/skin/frontend/jumbobag/default/css/animatehome.css" >
 <body class="<?php echo $this->getBodyClass()?' '.$this->getBodyClass().'':'' ?><?php echo Mage::getStoreConfig('shoppersettings/design/responsive') ? '': ' non-responsive ' ?>">
 <script type="text/javascript">
-    jQuery(function(){
+jQuery(function(){
 
-        var animateCounters = function() {
-            if (jQuery(document).scrollTop() > 300)
-            {
-                jQuery('.counter').each(function() {
-                    var $this = jQuery(this),
-                        countTo = ($this.attr('data-count') || "").trim(),
-                        significants = (countTo.match(/^[0-9]+\.([0-9]+)$|()()/)[1]||"").length,
-                        updateText = function() {
-                            $this.text((+this.countNum).toFixed(significants));
-                        };
+    var animateCounters = function() {
+        if (jQuery(document).scrollTop() > 300)
+        {
+            jQuery('.counter').each(function() {
+                var $this = jQuery(this),
+                    countTo = ($this.attr('data-count') || "").trim(),
+                    significants = (countTo.match(/^[0-9]+\.([0-9]+)$|()()/)[1]||"").length,
+                    updateText = function() {
+                        $this.text((+this.countNum).toFixed(significants));
+                    };
 
-                    jQuery({ countNum: $this.text() }).animate(
-                        { countNum: countTo },
-                        {
+                jQuery({ countNum: $this.text() }).animate(
+                    { countNum: countTo },
+                    {
 
-                            duration: 2000,
+                        duration: 2000,
                             easing:'linear',
                             step: function() {
                                 $this.text((+this.countNum).toFixed(significants));
@@ -123,34 +123,15 @@
 
                                 jQuery(window).off("scroll", animateCounters);
                             }
-                        }
-                    );
-                });
-            }
+                    }
+                );
+            });
         }
+    }
 
-        jQuery(window).scroll(animateCounters);
-        animateCounters();
-
-        jQuery(".owl-carousel").owlCarousel({
-            loop:true,
-            margin:10,
-            nav:true,
-            responsive:{
-                0:{
-                    items:1
-                },
-                600:{
-                    items:3
-                },
-                1000:{
-                    items:5
-                }
-            }
-        });
-    });
-
-
+    jQuery(window).scroll(animateCounters);
+    animateCounters();
+});
 </script>
 <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
      chromium.org/developers/how-tos/chrome-frame-getting-started -->
@@ -184,10 +165,11 @@
                     </section>
 
                     <section id="instagram" class="container">
-                        <div class="insta">
-                            <div class="row" id="instafeed">
-                                <h2 class="wow fadeInUp">partagez vos MOMENTS de Détente</h2>
-                                <p class="wow fadeInUp" data-wow-delay="0.1s">Partagez une photo de votre produit préféré sur instagram en utilisant le hashtag <a href="https://www.instagram.com/explore/tags/myjumbobag/" target="_blank">#myjumbobag</a></p>
+                        <div class="row">
+                            <h2 class="wow fadeInUp">partagez vos MOMENTS de Détente</h2>
+                            <p class="wow fadeInUp" data-wow-delay="0.1s">Partagez une photo de votre produit préféré sur instagram en utilisant le hashtag <a href="https://www.instagram.com/explore/tags/myjumbobag/" target="_blank">#myjumbobag</a></p>
+                            <div class="instagram-posts wow fadeInUp">
+                                <?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('home-instagram')->toHtml(); ?>
                             </div>
                         </div>
                     </section>
