--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/modern/template/catalog/product/view.phtml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/modern/template/catalog/product/view.phtml
@@ -298,9 +298,12 @@ echo $this->getChildHtml('extrahint');
                 </div>
             </div>
             <div class="insta">
-                <div class="row" id="instafeed">
+                <div class="row">
                     <h2 class="wow fadeInUp">partagez vos MOMENTS de Détente</h2>
                     <p class="wow fadeInUp" data-wow-delay="0.1s">Partagez une photo de votre produit préféré sur instagram en utilisant le hashtag #myjumbobag</p>
+                    <div class="instagram-posts wow fadeInUp">
+                        <?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('home-instagram')->toHtml(); ?>
+                    </div>
                 </div>
             </div>
         </form>
