Add instagram animations

--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/modern/template/catalog/product/view.phtml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/modern/template/catalog/product/view.phtml
@@ -303,7 +303,7 @@ echo $this->getChildHtml('extrahint');
                 <div class="row">
                     <h2 class="wow fadeInUp">partagez vos MOMENTS de Détente</h2>
                     <p class="wow fadeInUp" data-wow-delay="0.1s">Partagez une photo de votre produit préféré sur instagram en utilisant le hashtag #myjumbobag</p>
-                    <div class="instagram-posts wow fadeInUp">
+                    <div class="instagram-posts">
                         <?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('home-instagram')->toHtml(); ?>
                     </div>
                 </div>
