--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/page/home-new.phtml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/default/template/page/home-new.phtml
@@ -168,7 +168,7 @@ jQuery(function(){
                         <div class="row">
                             <h2 class="wow fadeInUp">partagez vos MOMENTS de Détente</h2>
                             <p class="wow fadeInUp" data-wow-delay="0.1s">Partagez une photo de votre produit préféré sur instagram en utilisant le hashtag <a href="https://www.instagram.com/explore/tags/myjumbobag/" target="_blank">#myjumbobag</a></p>
-                            <div class="instagram-posts wow fadeInUp">
+                            <div class="instagram-posts">
                                 <?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('home-instagram')->toHtml(); ?>
                             </div>
                         </div>
