Update instagram header in product view

--- a/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/modern/template/catalog/product/view.phtml
+++ b/.modman/Jumbobag_Core/src/app/design/frontend/jumbobag/modern/template/catalog/product/view.phtml
@@ -299,7 +299,7 @@ echo $this->getChildHtml('extrahint');
                     ?>
                 </div>
             </div>
-            <div class="insta">
+            <div id="instagram" class="container">
                 <div class="row">
                     <h2 class="wow fadeInUp">partagez vos MOMENTS de Détente</h2>
                     <p class="wow fadeInUp" data-wow-delay="0.1s">Partagez une photo de votre produit préféré sur instagram en utilisant le hashtag #myjumbobag</p>
